[CCAP-607] Disabling and removing Percy